# CorporiDoC

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: TASKBOOK.md  index.html  manifest.webmanifest  sw.js
src/corporidoc/: __init__.py  __main__.py  app.py
src/corporidoc/data/: __init__.py  database.py  model_store.py  video_playback.py  video_probe.py  video_store.py
src/corporidoc/domain/: __init__.py  inference_run.py  model_asset.py  patient.py  time_alignment.py  video_asset.py  video_quality.py
src/corporidoc/pose/: __init__.py  contracts.py  mediapipe_backend.py  mock_backend.py  model_preflight.py  request_builder.py
src/corporidoc/ui/: __init__.py  main_window.py  pose_tab.py  settings_tab.py  video_details_dialog.py  video_intake_dialog.py  video_player_dialog.py  video_tab.py
tests/: test_inference_repository.py  test_mediapipe_backend.py  test_mock_pose_backend.py  test_model_assets.py  test_patient_repository.py  test_pose_contract.py  test_pose_request_builder.py  test_time_alignment.py  test_version.py  test_video_intake.py  test_video_playback.py  test_video_quality.py
