[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corporidoc"
version = "0.5.1"
description = "Clinician-supervised video phenotyping for disorders of consciousness"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "opencv-python>=4.10,<5",
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]
pose = [
  "deeplabcut>=3.0,<3.2",
  "pandas>=2.2,<3",
]
human-pose = [
  "mediapipe>=0.10.35,<0.11",
]

[project.scripts]
corporidoc = "corporidoc.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
